feat : add endpoint to retrieve all payments